; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/byacc/extr_error.c_dollar_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/byacc/extr_error.c_dollar_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"%s: e - line %d of \22%s\22, illegal $-name\0A\00", align 1
@myname = common dso_local global i8* null, align 8
@input_file_name = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dollar_error(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @stderr, align 4
  %8 = load i8*, i8** @myname, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i8*, i8** @input_file_name, align 8
  %11 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %8, i32 %9, i8* %10)
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @print_pos(i8* %12, i8* %13)
  %15 = call i32 @done(i32 1)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i32, i8*) #1

declare dso_local i32 @print_pos(i8*, i8*) #1

declare dso_local i32 @done(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
